доделки по css html. карточки при фокусе принимают анимацию

--- a/blocks.html
+++ b/blocks.html
@@ -292,7 +292,7 @@
                               <section class="blocks__more-tariff">
                                     <h3 class="blocks__name">Тарифы</h3>
                                     <div class="more-tariff__container">
-                                          <div class="more-tariff__free">
+                                          <a href="" class="more-tariff__free">
                                                 <div class="more-tariff__free-header">
                                                       <h4 class="more-tariff__free-headline">Бесплатно</h4>
                                                       <b class="more-tariff__free-price">0 ₽</b>
@@ -313,8 +313,8 @@
                                                             Вкусняшки</li>
                                                 </ul>
                                                 <button class="more-tariff__free-button">Выбрать тариф</button>
-                                          </div>
-                                          <div class="more-tariff__premium">
+                                          </a>
+                                          <a href="" class="more-tariff__premium">
                                                 <div class="more-tariff__premium-header">
                                                       <h4 class="more-tariff__premium-headline">Премиум</h4>
                                                       <b class="more-tariff__premium-price">10 000 ₽</b>
@@ -335,8 +335,8 @@
                                                             Вкусняшки</li>
                                                 </ul>
                                                 <button class="more-tariff__premium-button">Выбрать тариф</button>
-                                          </div>
-                                          <div class="more-tariff__unlimited">
+                                          </a>
+                                          <a href="" class="more-tariff__unlimited">
                                                 <div class="more-tariff__unlimited-header">
                                                       <h4 class="more-tariff__unlimited-headline">Безлимит</h4>
                                                       <b class="more-tariff__unlimited-price">90 000 ₽</b>
@@ -357,7 +357,7 @@
                                                             Вкусняшки</li>
                                                 </ul>
                                                 <button class="more-tariff__unlimited-button">Выбрать тариф</button>
-                                          </div>
+                                          </a>
                                     </div>
                               </section>
                               <section class="blocks__more-table">
