--- a/components.html
+++ b/components.html
@@ -272,14 +272,14 @@
                               <a id="carts"></a>
                               <h2 class="components__carts-headline">Карточки</h2>
                               <div class="components__carts-wrapper">
-                                    <div class="components__cart1">
+                                    <a href="" class="components__cart1">
                                           <img class="components__cart1-img" src="img/pic-1.svg" width="200"
                                                 height="200" alt="Изображение">
                                           <h4 class="components__cart1-name">Типографика</h4>
                                           <p class="components__cart1-notice">Шрифтовые стили для структурирования
                                                 текстового контента</p>
-                                          <a href="" class="components__cart1-link">Перейти</a>
-                                    </div>
+                                          <button class="components__cart1-link" type="button">Перейти</button>
+                                    </a>
                               </div>
                         </section>
 
