фокус на интерактивных и неинтерактивных элементах

--- a/blocks.html
+++ b/blocks.html
@@ -208,7 +208,8 @@
                                                             id="more-file__form-input" type="file" name="photo" multiple
                                                             accept="image/*,image/jpeg">
 
-                                                      <span class="more-file__form-button">Выбрать файл</span>
+                                                      <label class="more-file__form-button" tabindex="0">Выбрать
+                                                            файл</label>
                                                 </label>
                                           </form>
                                           <div class="more-file__form-value">
