--- a/form-elements.html
+++ b/form-elements.html
@@ -340,7 +340,8 @@
                                                 <div class="form-elements__select-multiple">
                                                       <label class="form-elements__select-multiple-label">Лейбл</label>
                                                       <div class="form-elements__field-multiple-select1">
-                                                            <div class="field-multiple-select1__item-container">
+                                                            <div class="field-multiple-select1__item-container"
+                                                                  tabindex="0">
                                                                   <span
                                                                         class="field-multiple-select1__item">Первый</span>
                                                                   <span
@@ -377,7 +378,8 @@
                                                 <div class="form-elements__select-multiple">
                                                       <label class="form-elements__select-multiple-label">Лейбл</label>
                                                       <div class="form-elements__field-multiple-select2">
-                                                            <div class="field-multiple-select2__item-container">
+                                                            <div class="field-multiple-select2__item-container"
+                                                                  tabindex="0">
                                                                   <span
                                                                         class="field-multiple-select2__item">Первый</span>
                                                                   <span
